# publishers-watchfiles

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/publishers/: watchfiles_publisher.py
src/nagare/publishers/: watchfiles_publisher.py
